resources/webidl2/test/invalid/idl/extattr-double.widl
[Constructor([Clamp] [Clamp] unsigned long value)] // this is invalid
interface Foo {};
